[package]
name = "bot_arena"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
futures-util = "0.3.28"
json = "0.12.4"
log = "0.4.20"
once_cell = "1.18.0"
poker = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
